# n2yo-consumer

./: .env.example  .gitignore  Cargo.toml  README.md  docker-compose.yml
.github/workflows/: actions.yml
service/: Cargo.toml  Dockerfile
service/src/: http.rs  lib.rs  main.rs  n2yo.rs  open_meteo.rs
service/src/config/: env.rs
service/tests/: health.rs
