[package]
name = "service"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.13.0"
config = "0.15.11"
dotenvy = "0.15.7"
env_logger = "0.11.8"
log = "0.4.28"
reqwest = { version = "0.12.24", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.50.0", features = ["macros", "rt-multi-thread"] }
utoipa = "5.4.0"
utoipa-swagger-ui = { version = "9.0.2", features = ["actix-web"] }
